# emacsy

./: .dir-locals.el  .gitignore  AUTHORS  INSTALL  Makefile.am  NEWS  README  README.md  configure.ac  guix.scm  todo.org
build-aux/: pre-inst-env.in
doc/: api.texi  emacsy.texi  hello-emacsy.texi
doc/images/: README
emacsy/: advice.scm  block.scm  buffer.scm  command.scm  convenience-lambda.scm  core.scm  cursor-list.scm  emacsy.c  emacsy.h  emacsy.pc.in  emacsy.scm  event.scm  help.scm  job.scm  kbd-macro.scm  keymap.scm  klecl.scm  line-pragma.scm  minibuffer.scm  mode.scm  mru-stack.scm  self-doc.scm  text.scm  util.scm  vector-math.scm  window.scm  windows.scm
example/: emacsy-webkit-gtk-w-buffers.c  emacsy-webkit-gtk-w-buffers.scm  emacsy-webkit-gtk-w-windows.c  emacsy-webkit-gtk-w-windows.scm  emacsy-webkit-gtk.c  emacsy-webkit-gtk.scm  hello-emacsy.c  hello-emacsy.scm
scripts/: doc-snarf.scm  latex2texi.sh
src/: Makefile.am  cursor-list.scm  line-pragma.nw
src/emacsy/: Makefile.am  advice.nw  block.nw  buffer.nw  command.nw  core.nw  coroutine-test.scm  coroutine.scm  emacsy-c-api.nw  emacsy.nw  event.nw  help.nw  kbd-macro.nw  keymap.nw  klecl.nw  minibuffer.nw  mru-stack.nw  self-doc.nw  util.nw  window.nw  windows.nw
support/automake/: noweb.am
support/m4/: ax_check_noweb.m4
support/noweb/: boiler-plate-scm.nw  boiler-plate.nw
test/: Makefile.am  advice.scm  block.scm  buffer.scm  command.scm  core.scm  emacsy.scm  event.scm  help.scm  kbd-macro.scm  keymap.scm  klecl.scm  minibuffer.scm  mru-stack.scm  self-doc.scm  window.scm  windows.scm
